--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "recharts": "^2.15.3"
   },
   "devDependencies": {
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
